mysql/mysql-0-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-0-link
  namespace: kube-public
  labels:
    app: mysql-link
spec:
  type: NodePort
  ports:
  - name: mysql
    port: 3306
    nodePort: 31306
  selector:
    app: mysql
    statefulset.kubernetes.io/pod-name: mysql-0
