mysql/mysql-wdt-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: wdt-mysql-service
  namespace: wdt-test
spec:
  type: ExternalName
  externalName: mysql.kube-public.svc.cluster.local
